--- a/test/ubu_deployment.yaml
+++ b/test/ubu_deployment.yaml
@@ -14,5 +14,5 @@ spec:
     spec:
       containers:
       - name: ubuntu-container
-        image: ubuntu:rolling
+        image: ubuntu:latest
         command: ["/bin/sleep", "infinity"]  # Keep the container running
